cleaned up command annotations